SQuirreL SQL Client Change Log
==============================

${squirrelsql.changelog.header}

Not yet released, available in our GIT repository and in future snapshots and releases.
===============================================================================================

Enhancements:

New Plugin: Vertica DB Plugin
  New Plugin for the Vertica DB. Thanks to Vertica team.


Added Vertica driver to default driver list.

Fixed bug in windows start script squirrel-sql.bat: javaw.exe could not be found in certain cases.

Fixed bug in Oracle dialect concerning type information for timestamps.

#1084 Added MariaDB driver to default driver list.

Made data editing problems that concern update row counts more transparent by printing
  out details to SQuirreL's message panel. This may help to fix bugs like #1086.

Bug fixes:

Fixed NullPointer during shutdown:
java.lang.IllegalArgumentException: obj parameter must not be null
    at net.sourceforge.squirrel_sql.client.gui.recentfiles.RecentFilesManager.saveXmlBean(RecentFilesManager.java:84)
    at net.sourceforge.squirrel_sql.client.Application._saveApplicationState(Application.java:302)
    at net.sourceforge.squirrel_sql.client.Application.shutdown(Application.java:240)
    at net.sourceforge.squirrel_sql.client.gui.mainframe.MainFrame.dispose(MainFrame.java:141)
    at net.sourceforge.squirrel_sql.client.gui.mainframe.MainFrame$4.windowClosing(MainFrame.java:386)
    at javax.xml.bind.helpers.AbstractMarshallerImpl.checkNotNull(Unknown Source)
    at javax.xml.bind.helpers.AbstractMarshallerImpl.marshal(Unknown Source)
    at net.sourceforge.squirrel_sql.client.gui.recentfiles.RecentFilesManager.saveXmlBean(RecentFilesManager.java:77)


3.5.0 (5/5/2013)
==================

Enhancements:

Updated Italian translations. Thanks to Ivo Neri.

Updated French translations. Thanks to Erwan Duroselle.

SQL script save/open dialog remembers the last selected file name extension.
